Chapter13/ec-pod-with-shared-volume-fsgroup.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-shared-volume-fsgroup
spec:
  securityContext:
    fsGroup: 555
    supplementalGroups:
      - 666
      - 777
  containers:
    - name: first
      image: alpine
      command: ["/bin/sleep","999999"]
      securityContext:
        runAsUser: 1111
      volumeMounts:
        - mountPath: /volume
          name: shared-volume
          readOnly: false
    
    - name: second
      image: alpine
      command: ["/bin/sleep","999999"]
      securityContext:
        runAsUser: 2222
      volumeMounts:
        - mountPath: /volume
          name: shared-volume
          readOnly: false
  volumes:
    - name: shared-volume
      emptyDir: {}
