Chapter13/ec-network-policy-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
spec:
  # podSelector:
  #   matchLabels:
  #     app: database
  # ingress:
  #   - from:
  #       - podSelector:
  #           matchLabels:
  #             app: webserver
  #     ports:
  #       - port: 5432

  # podSelector:
  #   matchLabels:
  #     app: shopping-cart
  # ingress:
  #   - from:
  #       - namespaceSelector:
  #           matchLabels:
  #             tenant: manning
  #     ports:
  #       - port: 80

  podSelector:
    matchLabels:
      app: webserver
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: database
